--- a/.gradient/workflows/stylegan2-download-and-extract-data.yaml
+++ b/.gradient/workflows/stylegan2-download-and-extract-data.yaml
@@ -1,9 +1,3 @@
-on:
-  github:
-    branches:
-      only: main
-
-
 # StyleGAN2 Workflow 1 of 2: Download and extract data
 #
 # This is the YAML file used to run the Gradient download and extract data Workflow for the sample project based on
@@ -21,20 +15,29 @@ on:
 #
 # Dataset IDs
 #
-# The user needs to create their own Gradient managed dataset for job outputs, using the same names as here.
+# The user needs to create their own Gradient managed datasets for job outputs, using the same names as here.
 # See the project GitHub documentation for details on how to do this.
 #
 # Job name               Gradient managed dataset name
-# getCatImageDatabase -> stylegan-w1of2-cat-image-database
-# extractImages       -> stylegan-w1of2-extracted-images
 #
-# Last updated: Aug 08th 2021
+# getCatImageDatabase -> stylegan2-workflows-sample-project-cat-img-db
+# extractImages       -> stylegan2-workflows-sample-project-extr-img
+#
+# Last updated: Sep 15th 2021
 
-# Our download and extract steps do not require a GPU, so we default to a C5 machine for all steps
+# Trigger Workflow to run on update to repository when linked to a Gradient project
+# (uncomment to activate)
+
+#on:
+#  github:
+#    branches:
+#      only: main
+
+# Our download and extract steps do not require a GPU, so we default to a C3 machine for all steps
 
 defaults:
   resources:
-    instance-type: C5
+    instance-type: C3 # C5 will run these steps faster if available, but costs more
 
 jobs:
 
@@ -43,26 +46,23 @@ jobs:
   # The .zip file is about 45 gigabytes and the download takes about 30 minutes onto a Gradient machine
   # We compare its MD5 sum to the one available from the website to ensure we are using a consistent starting point
   # (they should be equal)
-  # The temporary workaround using gzip/split/cat/gunzip is visible here and in step 3
 
   getCatImageDatabase:
     outputs:
       catImageDatabase:
         type: dataset
         with:
-          ref: stylegan-w1of2-cat-image-database
+          ref: gradient/stylegan2-workflows-sample-project-cat-img-db # Use when this is working to update public dataset
     uses: script@v1
     with:
       script: |-
         curl -o /outputs/catImageDatabase/cat.zip.md5 'http://dl.yf.io/lsun/objects/cat.zip.md5'
         curl -C - -o /outputs/catImageDatabase/cat.zip 'http://dl.yf.io/lsun/objects/cat.zip'
         cd /outputs/catImageDatabase
-        split -a 3 -b 100m cat.zip cat_files_
         echo "MD5 sum from downloaded file:"
         md5sum cat.zip
         echo "MD5 sum from website:"
         cat /outputs/catImageDatabase/cat.zip.md5
-        rm cat.zip
         ls "-aFlR" /outputs/catImageDatabase
       image: tensorflow/tensorflow:1.14.0-gpu-py3
 
@@ -101,17 +101,13 @@ jobs:
       extractedImages:
         type: dataset
         with:
-          ref: stylegan-w1of2-extracted-images
+          ref: gradient/stylegan2-workflows-sample-project-extr-img
     uses: script@v1
     with:
       script: |-
         cd /inputs/catImageDatabase
-        mkdir -p /cat_workspace/catImagesReconstructed
-        mkdir /cat_workspace/catImagesUnzipped
-        cat cat_files_* > /cat_workspace/catImagesReconstructed/cat_reconstructed.zip
-        md5sum /cat_workspace/catImagesReconstructed/cat_reconstructed.zip
-        unzip /cat_workspace/catImagesReconstructed/cat_reconstructed.zip -d /cat_workspace/catImagesUnzipped
-        rm /cat_workspace/catImagesReconstructed/cat_reconstructed.zip
+        mkdir -p /cat_workspace/catImagesUnzipped
+        unzip cat.zip -d /cat_workspace/catImagesUnzipped
         pip install --upgrade pip
         pip install scipy==1.3.3
         pip install requests==2.22.0
@@ -119,7 +115,7 @@ jobs:
         pip install lmdb==1.2.1
         pip install python-lmdb==1.0.0b1
         apt-get update
-        apt-get install ffmpeg libsm6 libxext6  -y
+        apt-get install ffmpeg libsm6 libxext6 -y
         pip install opencv-python==4.5.1.48
         cp -R /inputs/repo /stylegan2
         cd /stylegan2
@@ -132,12 +128,6 @@ jobs:
         cd /outputs/extractedImages/cat_images_tfrecords
         mkdir cat
         mv *.tfrecords cat
-        cd cat
-        for res in 2 3 4 5 6 7 8; do \
-          gzip cat_images_tfrecords-r0$res.tfrecords; \
-          split -a 3 -b 100m cat_images_tfrecords-r0$res.tfrecords.gz cat_images_tfrecords-r0${res}_; \
-        done
-        rm cat_images_tfrecords-r0?.tfrecords.gz
         ls "-aFlR" /outputs/extractedImages
       image: tensorflow/tensorflow:1.14.0-gpu-py3
 
@@ -145,12 +135,12 @@ jobs:
   #
   # Some other notes on what some steps above are doing and why
   #
-  #  - The cat data has no download script, hence curl http://dl.yf.io/lsun/objects/cat.zip
   #  - The StyleGAN2 repo's download script is for the Flickr Faces Dataset, and
   #    LSUN's download script is for their scene categories dataset, not object categories
+  #  - The cat data under object categories has no download script, hence curl http://dl.yf.io/lsun/objects/cat.zip
   #  - getCatImageDatabase uses TensorFlow image because alpine:latest doesn't have bash, and bash:5 doesn't have curl
   #  - /cat_workspace is acting like a temporary volume (copy files to it then rm), which could be done more formally
   #  - pip install --upgrade pip helps the opencv install go considerably faster
   #  - lmdb, python-lmdb, and opencv are required for dataset_tool.py create_lsun
   #  - The apt-get commands are needed for OpenCV on this container
-  #  - The subdirectory /outputs/extractedImages/cat is needed so dataset_tool.py can locate the images
+  #  - The subdirectory /outputs/extractedImages/cat is needed so dataset_tool.py, etc., can locate the images
